# domain-razor

./: .env.example  Cargo.toml  README.md  domains.txt
src/: email.rs  main.rs
