[package]
name = "domain-checker"
version = "0.1.1"
authors = ["zzy <9809920@qq.com>"]
edition = "2018"
resolver = "2"

[dependencies]
fantoccini = "0.17.4"
lettre = "0.10.0-rc.3"

tokio = { version = "1.6.2", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
